--- a/package.json
+++ b/package.json
@@ -27,11 +27,13 @@
     "react-native-google-signin": "^2.1.1",
     "react-native-grid-image-viewer": "^1.0.10",
     "react-native-image-slider-box": "^1.0.12",
+    "react-native-pager-view": "^5.0.12",
     "react-native-paper": "^4.8.1",
     "react-native-reanimated": "~2.1.0",
     "react-native-render-html": "^5.1.0",
     "react-native-safe-area-context": "3.2.0",
     "react-native-screens": "~3.0.0",
+    "react-native-tab-view": "^3.0.1",
     "react-native-web": "^0.16.3",
     "react-redux": "^7.2.4",
     "redux": "^4.1.0",
