--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-native-google-signin": "^2.1.1",
     "react-native-grid-image-viewer": "^1.0.10",
     "react-native-image-slider-box": "^1.0.12",
+    "react-native-numeric-input": "^1.9.0",
     "react-native-pager-view": "^5.0.12",
     "react-native-paper": "^4.8.1",
     "react-native-reanimated": "~2.1.0",
