--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-native-google-button": "^0.1.0",
     "react-native-google-signin": "^2.1.1",
     "react-native-grid-image-viewer": "^1.0.10",
+    "react-native-image-picker": "^4.0.5",
     "react-native-image-slider-box": "^1.0.12",
     "react-native-numeric-input": "^1.9.0",
     "react-native-pager-view": "^5.0.12",
@@ -44,7 +45,8 @@
     "redux": "^4.1.0",
     "redux-devtools-extension": "^2.13.9",
     "redux-persist": "^6.0.0",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "expo-image-picker": "~10.1.4"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0"
